@@ -3,6 +3,8 @@
  - Fixed
    - RescanDatabaseOnSave configuration option wasn't being read from the
      configuration file resulting in the feature always being enabled
+   - Hourly graph image output using large fonts didn't correctly fade out
+     the x-axis line for hours not having data available
  - New
    - Add configuration option InterfaceMatchMethod which allows configuring
      the possibility of specifying an interface for database queries by using
